overflow hidden added to buttons to stop them from flowing out of containers

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,7 +34,9 @@ main {
     overflow:hidden;
 }
 
-
+button{
+    text-align:center;
+}
 
 
 h2 {
@@ -72,6 +74,7 @@ a {
 .card-panel {
 	background-color: #FFF7ED;
 	text-align: center;
+    overflow:hidden;
 }
 
 .header-text {
